new instructions to run .jar file